Updated with help cursor

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Server Configuration
 SERVER_HOST=0.0.0.0
-SERVER_PORT=8000
+SERVER_PORT=8002
 DEBUG=true
 LOG_LEVEL=INFO
 
@@ -9,26 +9,24 @@ KUBECONFIG_PATH=/app/.kube/config
 K8S_CONTEXT=default
 K8S_NAMESPACE=default
 
-# Prometheus Configuration
+# External Services URLs (internal Docker network names)
 PROMETHEUS_URL=http://prometheus:9090
 PROMETHEUS_TIMEOUT=30
 
-# Loki Configuration
 LOKI_URL=http://loki:3100
 LOKI_TIMEOUT=30
 
-# Jaeger Configuration
 JAEGER_URL=http://jaeger:16686
 JAEGER_TIMEOUT=30
 
-# Database Configuration
+# Database
 DATABASE_URL=postgresql://sre_user:sre_password@postgres:5432/sre_agent
 
-# Redis Configuration
+# Redis
 REDIS_URL=redis://redis:6379/0
 
 # Security
-SECRET_KEY=your-secret-key-here
+SECRET_KEY=your-secret-key-here-change-in-production
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
@@ -36,8 +34,11 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 METRICS_PORT=8001
 HEALTH_CHECK_TIMEOUT=30
 
-# External Services
+# Cloud Provider
 CLOUD_PROVIDER=aws
 AWS_REGION=us-east-1
 GCP_PROJECT=your-project
 AZURE_SUBSCRIPTION=your-subscription
+
+# Environment
+ENVIRONMENT=development
